# simple_ai_bitcoin_trading_binance

./: .codecov.yml  .coveragerc  .deepsource.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  LIVE_TESTNET_RUNBOOK.md  PLANNING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  run-gui.cmd  run-gui.sh  run-shell.cmd  run-shell.sh
.github/: readme_badges.json
.github/workflows/: ci.yml
docs/: DESIGN_RESEARCH_NOTES_2026-04-28.md  FREE_SIGNAL_SOURCE_INVENTORY.md  INTEGRATIONS_PLAN.md  SIMILAR_TRADING_REPOS_REVIEW.md
src/simple_ai_bitcoin_trading_binance/: __init__.py  api.py  (+27 more)
tests/: conftest.py  test_advanced_model.py  test_api.py  test_api_coverage.py  test_audit.py  test_autonomous.py  test_backtest.py  test_backtest_coverage.py  test_backtest_panel.py  test_chart.py  test_cli.py  test_cli_coverage.py  test_cli_new_commands.py  test_compute.py  test_config.py  test_dashboard.py  test_data_sync_cli.py  test_external_signals.py  test_features.py  test_full_line_coverage.py  test_funds_and_settings.py  test_intervals.py  test_logging_ext.py  test_market_data.py  test_model.py  test_model_coverage.py  test_objective.py  test_positions.py  test_push_with_pat.py  test_quality_metrics_tool.py  test_readme_badges.py  test_risk_controls.py  test_shell.py  test_style.py  test_telemetry_and_source_grading.py  test_training_suite.py  test_training_suite_parallel.py  test_tui.py
tools/: push_with_pat.py  quality_metrics.py  run_real_data_soak.py  update_readme_badges.py
(+10 files in other folders)
