[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-ai-bitcoin-trading-binance"
version = "0.1.0"
description = "BTCUSDC paper-trading CLI with conservative Binance testnet workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["requests"]

[project.scripts]
simple-ai-trading = "simple_ai_bitcoin_trading_binance.cli:main"

[tool.pytest.ini_options]
addopts = ["-q"]

[tool.coverage.run]
branch = true
source = ["src/simple_ai_bitcoin_trading_binance"]
omit = ["src/simple_ai_bitcoin_trading_binance/__main__.py"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 75
